--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch": "textlint-scripts build --watch"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
     "@textlint/types": "^13.4.1",
     "@types/node": "^18.18.13",
     "textlint-scripts": "^13.4.1",
