--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   "dependencies": {
     "kuromojin": "^3.0.0",
     "morpheme-match-textlint": "^2.0.6"
+  },
+  "peerDependencies": {
+    "textlint": ">= 5.5.0"
   }
 }
